# KeOS

./: .gitignore  AUTHORS.md  LICENSE  README.md  get-projects.sh  install.sh  rust-toolchain
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/abyss/: all.html  constant.MAX_CPU.html  index.html  macro.debug.html  macro.info.html  macro.mmio.html  macro.print.html  macro.println.html  macro.warning.html  sidebar-items.js  struct.GeneralPurposeRegisters.html  struct.PFErrorCode.html  struct.Pa.html  struct.Registers.html  struct.SpinLock.html  struct.Va.html
docs/keos/: all.html  constant.MAX_CPU.html  crates.js  enum.KernelError.html  fn.rust_ap_main.html  fn.rust_main.html  help.html  index.html  macro.debug.html  macro.info.html  macro.print.html  macro.println.html  (+6 more)
fs/simple_fs/: Cargo.toml
fs/simple_fs/src/: keos_binder.rs  lib.rs
keos/: Cargo.toml
keos-projects/: Cargo.toml  build.rs
keos-projects/keos-project2/grader/: .grade-target  Cargo.toml
keos-projects/keos-project2/grader/src/: main.rs  mm_struct.rs  page_table.rs  userprog.rs
keos-projects/keos-project2/grader/userprog/: Makefile  arg_parse.c  bad_addr_1.c  bad_code_write.c  bad_inst_1.c  loader_bss_sanity.c  mm_exit_cleanup.c  mm_mmap.c  mm_mmap_error_bad_addr.c  mm_mmap_error_bad_fd.c  mm_mmap_error_protection.c  mm_mmap_error_protection_exec.c  mm_munmap.c  mm_munmap2.c  mm_munmap_error.c  mm_munmap_error_bad_addr.c  mm_munmap_error_double_free.c  mm_munmap_error_unaligned.c  sys_close.c  sys_open.c  sys_pipe.c  sys_read.c  sys_read_error.c  sys_seek.c  sys_seek_error.c  sys_stderr.c  sys_stdio_1.c  sys_stdio_2.c  sys_stdout.c  sys_tell.c  sys_tell_error.c  sys_write.c  sys_write_error.c
keos-projects/keos-project3/grader/: .grade-target  Cargo.toml
keos-projects/keos-project3/grader/rootfs/: hello3
keos-projects/keos-project3/grader/src/: main.rs  mm_struct.rs  userprog.rs  userprog_part_2.rs
keos-projects/keos-project3/grader/userprog/: Makefile  arg_parse.c  bad_addr_1.c  bad_code_write.c  bad_inst_1.c  fork_cow_cleanup.c  mm_cow.c  mm_cow_perm.c  mm_cow_sys.c  mm_exit_cleanup.c  mm_mmap.c  mm_mmap_error_bad_addr.c  mm_mmap_error_bad_fd.c  mm_mmap_error_protection.c  mm_mmap_error_protection_exec.c  mm_munmap.c  mm_munmap2.c  mm_munmap_error.c  mm_munmap_error_bad_addr.c  mm_munmap_error_double_free.c  mm_munmap_error_unaligned.c  sys_close.c  sys_fork.c  sys_fork2.c  sys_open.c  sys_pipe.c  sys_read.c  sys_read_error.c  sys_seek.c  sys_seek_error.c  sys_stderr.c  sys_stdio_1.c  sys_stdio_2.c  sys_stdout.c  sys_tell.c  sys_tell_error.c  sys_write.c  sys_write_error.c
keos/abyss/: Cargo.toml
keos/abyss/src/: addressing.rs  kprint.rs  lib.rs  spinlock.rs
keos/abyss/src/boot/: ap.s  bootstrap.s  mod.rs  multiboot.rs
keos/abyss/src/dev/: mmio.rs  mod.rs
keos/abyss/src/dev/pci/: cap.rs  header.rs  mod.rs  x86_config.rs
keos/abyss/src/dev/pci/virtio/: mod.rs  pci.rs  virt_queue.rs
keos/abyss/src/dev/pci/virtio/block/: mod.rs
keos/abyss/src/dev/x86_64/: apic.rs  serial.rs  timer.rs
keos/abyss/src/interrupt/: entry.rs  entry.s  mod.rs
keos/abyss/src/syscall/: entry.rs  entry.s  mod.rs
keos/abyss/src/unwind/: ehframe.rs  machine.rs  mod.rs  personality.rs  reader.rs  x86_64.rs
keos/abyss/src/x86_64/: intrinsics.rs  kernel_gs.rs  mod.rs  msr.rs  power_control.rs  segmentation.rs  tss.rs
keos/grading/: Cargo.toml
keos/grading/grading-derive/: Cargo.toml
keos/grading/grading-derive/src/: lib.rs
keos/grading/src/: lib.rs
keos/src/: channel.rs  debugging.rs  fs.rs  interrupt.rs  lib.rs  power.rs  task.rs  teletype.rs  tips.rs  util.rs
keos/src/lang/: mod.rs  panicking.rs
keos/src/lang/slab/: atomic128.rs  mod.rs  slab_allocator.rs
keos/src/mm/: mod.rs  page_table.rs  tlb.rs
keos/src/sync/: atomic.rs  mod.rs  rwlock.rs  spinlock.rs
keos/src/syscall/: mod.rs  uaccess.rs
keos/src/thread/: mod.rs  scheduler.rs
kev/: Cargo.toml
kev-projects/: .cargo  Cargo.toml  build.rs
kev-projects/kev-project0/grader/: .grade-target  Cargo.toml  build.rs
kev-projects/kev-project0/grader/src/: main.rs  page_table.rs  round_robin.rs
kev-projects/kev-project1/grader/: .grade-target  Cargo.toml
kev-projects/kev-project1/grader/src/: cpuid.rs  hypercall.rs  main.rs  msr.rs  pio.rs
kev-projects/kev-project2/: Cargo.toml
kev-projects/kev-project2/grader/: .grade-target  Cargo.toml
kev-projects/kev-project2/grader/gkeos/: Cargo.toml
kev-projects/kev-project2/grader/gkeos/src/: main.rs
kev-projects/kev-project2/grader/src/: ept.rs  gkeos.rs  main.rs  mmio.rs
kev-projects/kev-project2/src/: ept.rs  lib.rs  mmio.rs  simple_ept_vm.rs
kev-projects/kev-project2/src/keos_vm/: mod.rs  pager.rs
kev-projects/kev-project2/src/keos_vm/dev/: kvm.rs  x2apic.rs  x86.rs
kev-projects/kev-project2/src/vmexit/: mmio.rs
kev-projects/kev-project3/grader/gkeos/: .cargo  Cargo.toml
kev-projects/kev-project3/grader/gkeos/src/: main.rs  round_robin.rs  simple_virtio.rs  virtio.rs
kev-projects/kev-project4/grader/: .grade-target  Cargo.toml  build.rs
kev-projects/kev-project4/grader/gkeos/: Cargo.toml
kev-projects/kev-project4/grader/gkeos/src/: main.rs
kev-projects/kev-project4/grader/src/: main.rs
scripts/: create_submission.sh  install-keos.sh  install-kev.sh  install.sh  update.sh
(+3846 files in other folders)
