[package]
name = "simple_fs"
version = "0.1.0"
edition = "2024"

[lib]
test = false

[dev-dependencies]
rand = { version = "*" }

[dependencies]
abyss = { path = "../../keos/abyss", optional = true }
keos = { path = "../../keos", optional = true }

[features]
default = []
keos_binder = ["abyss", "keos"]