[package]
name = "kev-project4"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.2.1"

keos = { path ="../../../keos" }
simple_fs = { path = "../../../fs/simple_fs", features = ["keos_binder"] }
keos-project2 = { path ="../../../keos-projects/keos-project2" }
keos-project4 = { path ="../../../keos-projects/keos-project4" }

kev = { path = "../../../kev" }
kev-project1 = { path ="../../kev-project1" }
kev-project2 = { path ="../../kev-project2" }
kev-project3 = { path ="../../kev-project3" }

[build-dependencies]
simple_fs = { path = "../../../fs/simple_fs" }